--- a/modelo_copin/main_mestrado.tex
+++ b/modelo_copin/main_mestrado.tex
@@ -78,12 +78,12 @@ showstringspaces=false
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \Titulo{Desmistificando Estereótipos de Gênero em Comunidades de Perguntas e Respostas}
 % \Titulo{Diferenças (e similaridades) entre gêneros quanto às suas contribuições a sites de Perguntas e Respostas}
-\Titulo{?}
+\Titulo{Diferenças Comportamentais Entre Gêneros em Comunidades de Perguntas e Respostas}
 % Gender differences (and similarities) in contribution behavior on social Q\&A sites
 \Autor{Milena Sales Araujo}
 \Data{30/06/2015}
 \Area{Ciência da Computação}
-\Pesquisa{Linha de Pesquisa}
+\Pesquisa{Computação Social}
 \Orientadores{Nazareno Ferreira de Andrade  \\
 	 (Orientador)}
 
@@ -176,6 +176,7 @@ showstringspaces=false
 % Caso seja necessario algum apendice, descomente a proxima linha.
 
 \appendix
+\input{sumario}
 \input{apendices}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
