--- a/modelo_copin/introducao.tex
+++ b/modelo_copin/introducao.tex
@@ -2,27 +2,21 @@
 \chapter{Introdução}
 \label{sec:introduction}
 
-Nos últimos anos, fontes de informação colaborativa online têm criado a sua importância no meio web, por seu conteúdo confiável e de fácil acesso. Podemos destacar, dentre tantas outras, a Wikipedia, Yahoo Answers e as plataformas do StackExchange. Essa última, apesar das suas mais de 100 comunidades, destaca-se no campo de STEM, com comunidades com mais de 4 milhões de usuários. 
+Nos últimos anos, fontes de informação colaborativa online têm adquirido a sua importância no meio web por seu conteúdo confiável e de fácil acesso. Podemos destacar, dentre tantas outras, a Wikipedia, Yahoo Answers e as plataformas do StackExchange. Essa última, apesar das suas mais de 100 comunidades, destaca-se no campo de STEM, com comunidades com mais de 4 milhões de usuários. 
 
 Sabendo que o conteúdo destas comunidades de perguntas e respostas é criado por voluntários, estes sites são extremamente dependentes da adoção e contribuição de seus usuários. Assim como a diversidade no conteúdo, a diversidade de visões de um certo assunto no conteúdo da comunidade também depende da diversidade dos usuários voluntários.
 
 A motivação inicial para este estudo foi um receio quanto à diversidade de gêneros ou "gender gap". Com o relatório de diversidade apresentado por grandes companhias como Google~\cite{google:report} e Linkedin~\cite{linkedin:report} mostrando que a proporção de mulheres em cargos de liderança é baixo, associamos logo às comunidades Open Source que apresentam números parecidos~\cite{rustad2011suck}. Chegando, enfim, a comunidades de perguntas e respostas, como o StackExchange onde resultados recentes mostram que mulheres são uma minoria extrema dentre os contribuidores do StackOverflow~\cite{Vasilescu27092013}, a maior comunidade dentro da plataforma StackExchange. Contudo, nota-se que pessoas que questionam a razão do "gender gap" no StackOverflow podem ser mal entendidas e até distratadas\footnote{http://is.gd/eAnI8R}.
 
-Tais fatos coincidem com estereótipos comuns de mulheres em campos de STEM~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos que possuem homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, as comunidades do StackExchange podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. E, por fim, ter um melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
+Tais fatos coincidem com estereótipos comuns de mulheres em campos de STEM~\cite{spencer1999stereotype} assim como a baixa influência que mulheres possuem em grupos que possuem homens e mulheres ~\cite{karpowitz2012gender}. Contudo, se mulheres realmente são influenciadas a contribuir menos que homens nestas comunidades, os sites do StackExchange podem estar perdendo não só contribuidores de qualidade, mas também a oportunidade de produzir conteúdo que representa as visões de ambos os gêneros. E, por fim, ter um melhor funcionamento, sendo uma comunidade com grupos de gêneros distintos~\cite{marshall1975boys}.
 
 Esta pesquisa tem como objetivo estudar as consequências de um usuário identificar seu gênero em comunidades do StackExchange. Para atingir o nosso objetivo, estudamos usuários que participaram da comunidade e os quais podemos identificar seu gênero facilmente. Destes, os seguintes aspectos foram analisados: participação, qualidade das contribuições, tempo ativo na comunidade, contribuições ao longo do tempo. Mais ainda, estudamos como se comporta a proporção de registros por cada gênero, em cada comunidade, ao longo do tempo.
 
-Apesar de que estudos anteriores apontam que a fração de contribuidoras é bem menor do que a de contribuidores, não é claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto.
-% TODO: esse parágrafo pode ser refeito
- % Ao mesmo tempo, se não houverem diferenças em nenhum dos aspectos estudados, poderíamos inferir que contribuições vindas de ambos os gêneros são similares, sugerindo que, apesar do número baixo, mulheres são contribuidoras de valia e incentivá-las a entrar e continuar na comunidade apenas trará melhorias para o site.
+Apesar de que estudos anteriores apontam que a fração de contribuidoras é bem menor do que a de contribuidores, não é claro se mulheres tendem a, individualmente, contribuir menos, por menos tempo ou têm suas contribuições vistas como de menor qualidade pela comunidade. Estas observações podem nos orientar se estas comunidades são menos acolhedoras para contribuidoras e em que aspecto. Por outro lado, se mulheres não contribuem menos, por menos tempo nem tem seu conteúdo avaliado como de baixa qualidade, podemos deduzir que o foco de uma campanha de ampliação da diversidade nestas comunidades deve ter seu foco diferente de apenas convocar mulheres.
 
-% TODO:
-Our results point that on most of studied communities, women who identifies their gender on the site, not online contributes as much as men, but also have contributions seen as with the same quality and engage the same amount of time as men. In the communities where there is a significant difference on gender contributions, the pattern that emerges goes against stereotypes: most often, women tend to contribute more than men. Indeed, this happens even in STEM communities, and in particular it happens in StackOverflow, although in none of these communities women answer questions more often than men.
-Also related, we observe that there has been a growth on the proportion of new registrations and participation coming from women in several of the STEM related sites we study. 
+Nosso resultados mostram que, na maioria das comunidades estudadas, mulheres que expõem seu gênero no site, não só contribuem tanto quanto os homens, mas também têm suas contribuições vistas com o mesmo nível de qualidade e se dedicam ao site pelo mesmo período de tempo que os homens. Nas comunidades onde podemos verificar uma diferença significante entre as contribuições vindas dos dois gêneros, os padrões detectados vão de encontro com os estereótipos: na maioria das vezes, mulheres tendem a contribuir mais do que homens. Isto acontece até nas comunidades relacionadas a STEM, inclusive na StackOverflow, apesar de que, em nenhuma destas comunidades mulheres contribuem com mais respostas do que homens. Também conseguimos notar um crescimento na proporção de novos registros e contribuições vindas de mulheres em várias comunidades relacionadas a STEM.
 
-% Estes resultados questionam o esteriótipo que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto às dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que mostram seu gênero, no geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e resposta, e em particular àquelas com assuntos relacionados a STEM, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o "gender gap" nestes sites. 
-
-These results question the common-sense belief that women are less present in sites like those of StackExchange because their contribution are not as welcome as those from men. Instead, several indicators of contribution point that women who display their gender contribute in general similarly to men. These results portrait social Q\&A  and STEM social Q\&A sites as sites that do not systematically push away women contributors that are engaged with the community, and suggest the need to investigate alternatives to explain their gender gap. The lack of a pronounced answering behavior in STEM sites may be related to women's confidence on the field, as seen in other systems ~\cite{piazza:report}. Nevertheless, understanding that women who engage with these sites are as active as we observe suggests that for most communities, effort should be put in recruiting and early engagement. 
+Estes resultados questionam o senso comum de que mulheres são menos presentes em sites como os estudados porque suas contribuições podem não ser tão bem vindas quanto às dos homens. Em vez disso, os vários indicadores de contribuição que utilizamos mostram que mulheres que manifestam seu gênero, no geral, contribuem de maneira similar aos homens com a mesma característica. Estes resultados mostram comunidades de perguntas e respostas, e em particular àquelas com assuntos relacionados a STEM, não são comunidades exclusivas para homens e necessitam de motivos alternativos para explicar o \textit{gender gap} nestes sites. A  pode estar relacionada à falta de auto confiança no campo por parte das mulheres, como pode ser observado em outros sistemas~\cite{piazza:report}. Mais ainda, saber que mulheres que se engajam nestes sites são tão ativas quanto o que observamos sugere que o foco na campanha a favor da diversidade de gênero nestas comunidades deve ser no recrutamento e no engajamento inicial.
 
 % section introduction (end)
 
